--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is my custom website hosted on GitHub Pages.</p>
+    <h1>Welcome to the official SeismicFlow website!</h1>
+    <p>Coming soon.</p>
 </body>
 </html>
