--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <div id="contact" class="tab-content" style="display: none;">
             <h2>Contact</h2>
-            <p>Contact us at info@seismicflow.com</p>
+            <p>Contact us at MatinMahzad@yahoo.com</p>
         </div>
     </section>
 
