--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <div id="about" class="tab-content" style="display: none;">
             <h2>About</h2>
-            <p>SeismicFlow was created by a geophysicist with the aim of simplifying seismic processing workflows.</p>
+            <p>SeismicFlow was created by Matin Mahzad, a geophysics PhD candidate, with the aim of integrating AI into seismic processing and interpretation workflows.</p>
         </div>
         <div id="features" class="tab-content" style="display: none;">
             <h2>Features</h2>
