--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SeismicFlow</title>
+    <meta name="description" content="SeismicFlow is a comprehensive platform for AI-driven seismic data analysis, featuring TensorFlow, PyTorch, Scikit-learn, fault prediction, clustering, 3D visualization, and more.">
+    <meta name="keywords" content="SeismicFlow, seismic data analysis, AI-driven seismic, fault prediction, clustering, TensorFlow, PyTorch, well log analysis, 3D visualization, geophysics, machine learning">
+    <meta name="author" content="Matin Mahzad">
+    <meta name="robots" content="index, follow">
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="SeismicFlow - AI-Driven Seismic Data Analysis">
+    <meta property="og:description" content="SeismicFlow provides cutting-edge AI and machine learning tools for seismic data analysis, fault prediction, and well log interpretation.">
+    <meta property="og:image" content="https://seismicflow.github.io/images/preview.png">
+    <meta property="og:url" content="https://seismicflow.github.io/">
+    <meta property="og:type" content="website">
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="SeismicFlow - AI-Driven Seismic Data Analysis">
+    <meta name="twitter:description" content="Cutting-edge platform for seismic data analysis using AI and machine learning.">
+    <meta name="twitter:image" content="https://seismicflow.github.io/images/preview.png">
+    <meta name="twitter:url" content="https://seismicflow.github.io/">
+    <title>SeismicFlow - AI-Driven Seismic Data Analysis Platform</title>
     
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -80,10 +96,10 @@
 
     <!-- Navigation Tabs -->
     <nav>
-        <a href="#" onclick="showTab('home')">Home</a>
-        <a href="#" onclick="showTab('about')">About</a>
-        <a href="#" onclick="showTab('features')">Features</a>
-        <a href="#" onclick="showTab('contact')">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="features.html">Features</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Tab Content -->
