--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="SeismicFlow - AI-Driven Seismic Data Analysis">
     <meta property="og:description" content="SeismicFlow provides cutting-edge AI and machine learning tools for seismic data analysis, fault prediction, and well log interpretation.">
-    <meta property="og:image" content="https://seismicflow.github.io/images/preview.png">
+    <meta property="og:image" content="https://seismicflow.github.io/preview.png">
     <meta property="og:url" content="https://seismicflow.github.io/">
     <meta property="og:type" content="website">
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="SeismicFlow - AI-Driven Seismic Data Analysis">
     <meta name="twitter:description" content="Cutting-edge platform for seismic data analysis using AI and machine learning.">
-    <meta name="twitter:image" content="https://seismicflow.github.io/images/preview.png">
+    <meta name="twitter:image" content="https://seismicflow.github.io/preview.png">
     <meta name="twitter:url" content="https://seismicflow.github.io/">
     <title>SeismicFlow - AI-Driven Seismic Data Analysis Platform</title>
     
