--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 
     <!-- Navigation Tabs -->
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="features.html">Features</a>
-        <a href="contact.html">Contact</a>
+        <a href="#" onclick="showTab('home')">Home</a>
+        <a href="#" onclick="showTab('about')">About</a>
+        <a href="#" onclick="showTab('features')">Features</a>
+        <a href="#" onclick="showTab('contact')">Contact</a>
     </nav>
 
     <!-- Tab Content -->
