--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <meta name="keywords" content="SeismicFlow, seismic data analysis, AI-driven seismic, fault prediction, clustering, TensorFlow, PyTorch, well log analysis, 3D visualization, geophysics, machine learning">
     <meta name="author" content="Matin Mahzad">
     <meta name="robots" content="index, follow">
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "SeismicFlow",
+    "url": "https://seismicflow.github.io/",
+    "author": {
+      "@type": "Person",
+      "name": "Matin Mahzad"
+    },
+    "description": "SeismicFlow is an AI-driven seismic data analysis platform with features like fault prediction, clustering, and 3D visualization.",
+    "applicationCategory": "Data Analysis Software",
+    "operatingSystem": "Windows",
+    "softwareVersion": "1.0",
+    "image": "https://seismicflow.github.io/preview.png"
+  }
+    </script>
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="SeismicFlow - AI-Driven Seismic Data Analysis">
     <meta property="og:description" content="SeismicFlow provides cutting-edge AI and machine learning tools for seismic data analysis, fault prediction, and well log interpretation.">
