--- a/index.html
+++ b/index.html
@@ -24,6 +24,28 @@
     "image": "https://seismicflow.github.io/preview.png"
   }
     </script>
+    <script type="application/ld+json">
+   {
+     "@context": "https://schema.org",
+     "@type": "BreadcrumbList",
+     "itemListElement": [{
+       "@type": "ListItem",
+       "position": 1,
+       "name": "Home",
+       "item": "https://seismicflow.github.io/"
+     },{
+       "@type": "ListItem",
+       "position": 2,
+       "name": "About",
+       "item": "https://seismicflow.github.io/about"
+     },{
+       "@type": "ListItem",
+       "position": 3,
+       "name": "Features",
+       "item": "https://seismicflow.github.io/features"
+     }]
+   }
+    </script>
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="SeismicFlow - AI-Driven Seismic Data Analysis">
     <meta property="og:description" content="SeismicFlow provides cutting-edge AI and machine learning tools for seismic data analysis, fault prediction, and well log interpretation.">
