--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         <a href="#" onclick="showTab('about')">About</a>
         <a href="#" onclick="showTab('features')">Features</a>
         <a href="#" onclick="showTab('contact')">Contact</a>
+        <a href="#" onclick="showTab('downloads')">Downloads</a> <!-- New Downloads Tab -->
     </nav>
 
     <!-- Tab Content -->
@@ -177,6 +178,12 @@
             <h2>Contact</h2>
             <p>If you would like to learn more or collaborate, feel free to reach out:</p>
             <p>Email: <a href="mailto:matinmahzad@yahoo.com">matinmahzad@yahoo.com</a></p>
+        </div>
+        <!-- Downloads Section -->
+        <div id="downloads" class="tab-content" style="display: none;">
+        <h2>Downloads</h2>
+        <p>You can download the latest version of SeismicFlow below:</p>
+        <p><a href="https://seismicflow.github.io/SeismicFlow.zip" download>Download SeismicFlow v1.0</a></p>
         </div>
     </section>
 
