--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <div id="downloads" class="tab-content" style="display: none;">
             <h2>Downloads</h2>
             <p>You can download the latest version of SeismicFlow below:</p>
-            <p><a href="https://seismicflow.github.io/SeismicFlow.zip" download>Download SeismicFlow v1.0</a></p>
+            <p><a href="https://drive.google.com/uc?export=download&id=1zvpfy6RaPOG2NlYQvQ5BhUZSbgeT0xJl" download>Download SeismicFlow v1.0</a></p>
         </div>
     </section>
 
