--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         nav a {
             color: white;
             padding: 15px;
+            margin: 0 10px; /* Add margin between the links */
             text-decoration: none;
             font-weight: bold;
         }
