--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <li><strong>Customizable Workflows:</strong> Design your own neural network models, apply Bayesian optimization for hyperparameter tuning, and visualize results in 3D.</li>
                 <li><strong>Clustering:</strong> Advanced clustering techniques, including self-organizing maps (SOM) and deep embedded clustering (DEC).</li>
                 <li><strong>Multi-Language Capable:</strong> The application works with C++, Python, and JavaScript, allowing you to develop and add plugins in any of these languages.</li>
-                <li><strong>Plugin Development:</strong> Create your plugins with C++, Python, or JavaScript and continue building on this application.</li>
+                <li><strong>Plugin Development:</strong> Create your plugins with Python or C++, and continue building on this application.</li>
                 <li><strong>Inter-Plugin Communication:</strong> Plugins can communicate with the main application using methods such as sockets and server-client protocols.</li>
             </ul>
         </div>
