--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <li><strong>Petrophysical Characterization:</strong> Integration of well log and seismic data, 3D petrophysical property predictions, and facies categorization.</li>
                 <li><strong>Customizable Workflows:</strong> Design your own neural network models, apply Bayesian optimization for hyperparameter tuning, and visualize results in 3D.</li>
                 <li><strong>Clustering:</strong> Advanced clustering techniques, including self-organizing maps (SOM) and deep embedded clustering (DEC).</li>
-                <li><strong>Multi-Language Capable:</strong> The application works with C++ and Python allowing you to develop and add plugins in any of these languages.</li>
+                <li><strong>Multi-Language Capable:</strong> The application works with C++ and Python, allowing you to develop and add plugins in any of these languages.</li>
                 <li><strong>Plugin Development:</strong> Create your plugins with Python or C++, and continue building on this application.</li>
                 <li><strong>Inter-Plugin Communication:</strong> Plugins can communicate with the main application using methods such as sockets and server-client protocols.</li>
             </ul>
